cabal-version:      2.4
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             halfbro
maintainer:         mlagare22@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable backend-app
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    default-extensions:
        DeriveGeneric
      , OverloadedStrings
      , NumericUnderscores
      , DuplicateRecordFields
    other-modules:
        App
      , Noita.Types
      , RedirectState
      , StreamerTokenStore
      , Types
      , Util
      , WandChannels
      , Secrets

    -- LANGUAGE extensions used by modules in this package.
    build-depends:
        base
      , aeson
      , base64-bytestring
      , bytestring
      , cache
      , clock
      , containers
      , data-default
      , directory
      , filepath
      , focus
      , hashable
      , http-types
      , lens
      , mtl
      , network-uri
      , string-random
      , req
      , stm
      , stm-containers
      , text
      , time
      , unagi-chan
      , unordered-containers
      , wai
      , wai-app-static
      , wai-cors
      , wai-util
      , wai-websockets
      , warp
      , websockets

    hs-source-dirs:   src
    default-language: Haskell2010
